# agent-core

./: .gitignore  .sops.yaml  AGENT.md  Briefing_2026-07-18.md  GEMINI.md  INDEX.md  Makefile  README.md  app_context.py  pyproject.toml
actions/: _index.md
agents/: _index.md
config/: conf.env  credentials.enc.json  secret.enc.env  secret.env
data/: metrics.db
docs/: skill_design_principles.md
epics/: 01_migration_project.md  02_systematic_trading.md  03_action_reflection_pipeline.md  03_task_automation.md  04_agent_harness_construction.md  05_legacy_inbox_distillation.md  07_it_certifications.md  08_bold_instructor_training.md  09_study_group_attendance.md  10_oracle_workshop_handson.md  11_personal_finance.md  _index.md  action_reflection_pipeline.md  agent_harness_construction.md  personal_finance.md  study_group_attendance.md  systematic_trading.md  wellness_tracking_architecture.md
factories/: action_pipeline_factory.py  mobile_vault_factory.py  second_brain_factory.py  system_event_factory.py  task_management_factory.py  zettelkasten.py
jobs/: daily_scheduler_batch.py  fetch_mobile_to_queue.py  generate_daily_briefing.py  sync_worklogs.py
queue/: _index.md  event_harvest_achievements.md  handoff_20260721_calendar_sync.md  handoff_20260722_architecture_refactor_complete.md  handoff_20260723_architecture_refactor_part2_complete.md  handoff_20260723_test_reorganization.md  handoff_Proj_Action_Reflection_Pipeline.md  handoff_epic05_qa.md  handoff_epic05_resume.md
scratch/: create_note.sh
scripts/: check_zettelkasten.py  check_zettelkasten.sh  (+2 more)
(+376 files in other folders)
